# emili

./: .gitignore  .grammar-pure.xml.swp  .grammar3p.xml.swp  CMakeCache.txt  CMakeLists.txt  CONFIGURATIONS  EMILI  EMILI.cbp  EMILI.sln  EMILI.vcxproj  GIT  GeneralParserGuide.md  Greddy initial solution 1 last  Greedy initial solution  LICENSE.txt  Makefile  README.md  Solution_V_1.1.xml  algorithm.h  callgrind.out.10945  callgrind.out.10951  callgrind.out.10961  callgrind.out.6120  callgrind.out.8755  challengeAL.cbp  cmake_install.cmake  constructSolution  emilibase.cpp  emilibase.h  generalParser.cpp  generalParser.h  grammar-pure.xml  grammar.xml  grammar2.xml  grammar3p.xml  grammarNR.xml  irp.cpp  irp.cpp.Yu2554  irp.h  irpOld.cpp  (+19 more)
QAP/: qap.cpp  qap.h  qapBuilder.cpp  qapBuilder.h  qapconstants.h  qapinitialsolution.h  qapinstance.cpp  qapinstance.h  qapneighborhood.cpp  qapneighborhood.h  qapsolution.cpp  qapsolution.h
R scripts/: compare tests.R  tests.R
ROADF/: 1444025593_descrizione-tesi-estero-I-2015-16 FILLED.doc  BackSolution_V_1.1.xml  Instance.xml  Iterative Greedy  ROADF.pro  a.out  demo.xml  driver.cpp  driver.h  europeanCVformat.doc  instance.cpp  instance.h  location.cpp  location.h  main.cpp  makefile  matrix.h  operation.cpp  operation.h  solution.cpp  solution.h  trailer.cpp  trailer.h
SA/: SABuilder.cpp  SABuilder.h  metropolis.cpp  metropolis.h  paramsparser.cpp  paramsparser.h  sa.cpp  sa.h  saBuilder.cpp  sa_acceptance_criteria.cpp  sa_acceptance_criteria.h  sa_common.h  sa_constants.h  sa_cooling.h  sa_exploration.cpp  sa_exploration.h  sa_init_temp.h  sa_neighborhood.cpp  sa_neighborhood.h  sa_pfsp_parser.cpp  sa_pfsp_parser.h  sa_qap_parser.cpp  sa_qap_parser.h  sa_temperature_restart.h  sa_templength.h  sa_termination_criteria.h
TSP/: TODO  tsp.cpp  tsp.h  tspBuilder.cpp  tspBuilder.h  tspconstants.h  tspinitialsolution.h  tspinstance.cpp  tspinstance.h  tspneighborhood.cpp  tspneighborhood.h  tspsolution.cpp  tspsolution.h
Tests/: .Rhistory  2Objective  RDT 1Objective  RDT 2Objective
Tests best irace/: .Rhistory  3Objective  7Objective  RDT 2Objective  RDT 4Objective  RDT 5Objective  RDT 6Objective  RDT 7Objective  RDT 9Objective  raw_ RDT 10Objective  raw_ RDT 11Objective  raw_ RDT 6Objective  tests.R
Tests done/: compare tests.R
Tests done/Tests/: 1Objective  6Objective
Tests done/Tests best irace/: .RData  1 RDT Objective .txt  10 RDT Objective .txt  5 RDT Objective .txt  6 RDT Objective .txt  6Objective  9 RDT Objective .txt
Tests/Rand Rand/: 4Objective
Tests/Rand-Det/: 1Objective
examtt/: README.txt  examtt.cpp  examtt.h  examttparser.cpp  examttparser.h
grammars/: feasible_vrp.xml  g2c_parser_example.xml  grammar-pure.xml  grammar3p.xml  grammarNRp.xml  hfsp-wt-3simple.xml  irp-grammar-ILS.xml  irp-grammar.xml  jdpfsp-ms-3s.xml  no-idle-pfsp-ms.xml  no-idle-pfsp-ms2.xml  nw-pfsp-ms.xml  nwpfsp_ms.xml  pfsp-NEHLS.xml  pfsp-gen.xml  pfsp-ms-3.xml  pfsp-ms-3GLS.xml  pfsp-ms-3s2.xml  pfsp-ms-3simple.xml  pfsp-ms-3ss.xml  pfsp-ms-4-1lv.xml  pfsp-ms-4.xml  pfsp-ms-GT.xml  pfsp-ms-IGALL.xml  pfsp-sdst-ms.xml  pfsp-tct.xml  pfsp-tt-2.xml  pfsp-tt-3.xml  pfsp-tt-ILS.xml  pfsp-tt-TB.xml  pfsp-tt.xml  pfsp-wt-3simple.xml  pfsp_ms.xml  qap-em-1.xml  sa-qap-connolly-1.xml  sa-qap-connolly-2.xml  sa-qap.xml  tabutest_ms.xml  vrp.xml
old code/: Greedy initial solution 1 first  refuel neigh  twoExc neigs
pfsp/: hfspinstance.cpp  hfspinstance.h  paramsparser.cpp  paramsparser.h  permutationflowshop.cpp  permutationflowshop.h  pf_instace_generator.cpp  pfspBuilder.cpp  pfspBuilder.h  pfspinstance.cpp  pfspinstance.h  sse_functions.h
pop/: hdtlm.cpp  hdtlm.h  maneh.cpp  maneh.h  mbo.cpp  mbo.h  mboBuilder.cpp  mboBuilder.h  vig_de.cpp  vig_de.h
scripts/: conf_translator  iu_ece2  run_config.sh
scripts/templates/: target-runner  tune-main-cluster-mpi-em  tune-mpi-slurm
template/: problem_builder.cpp  problem_builder.h  problem_template.cpp  problem_template.h
test_different_proc/Tests/: 1Objective  3Objective  RDT 3Objective  RDT 4Objective  raw_ RDT 1Objective  raw_ RDT 2Objective  tests.R
test_different_proc/Tests best irace/: 10Objective  1Objective  5Objective  8Objective  9Objective  RDT 10Objective  RDT 11Objective  RDT 1Objective  RDT 3Objective  RDT 8Objective  raw_ RDT 7Objective  raw_ RDT 9Objective
test_different_proc/Tests done/: compare tests.R
testing/: DD_Ta055.txt  configurations.txt  run_tests.sh
tests_processor/1arb/: 1 RDT Objective .txt  10 RDT Objective .txt  10Objective  11 RDT Objective .txt  11Objective  1Objective  2 RDT Objective .txt  2Objective  3 RDT Objective .txt  3Objective  4 RDT Objective .txt  4Objective  5 RDT Objective .txt  5Objective  6 RDT Objective .txt  6Objective  7 RDT Objective .txt  7Objective  8 RDT Objective .txt  8Objective  9 RDT Objective .txt  9Objective  download.sh
tests_processor/2Irace5m/: 1 RDT Objective .txt  10 RDT Objective .txt  10Objective  11 RDT Objective .txt  11Objective  1Objective  2 RDT Objective .txt  2Objective  3 RDT Objective .txt  3Objective  4 RDT Objective .txt  4Objective  5 RDT Objective .txt  5Objective  6 RDT Objective .txt  6Objective  7 RDT Objective .txt  7Objective  8 RDT Objective .txt  8Objective  9 RDT Objective .txt  9Objective  download.sh
tests_processor/3Irace15m/: 1 RDT Objective .txt  10 RDT Objective .txt  10Objective  11 RDT Objective .txt  11Objective  1Objective  2 RDT Objective .txt  2Objective r  3 RDT Objective .txt  3Objective  4 RDT Objective .txt  4Objective  5 RDT Objective .txt  5Objective  6 RDT Objective .txt  6Objective  7 RDT Objective .txt  7Objective  8Objective  (+4 more)
vrp/: InitialSolution.cpp  InitialSolution.hpp  Instance.cpp  Instance.hpp  Neighborhood.cpp  Neighborhood.hpp  RichiesteServizio.cpp  RichiesteServizio.hpp  Route.cpp  Route.hpp  SolutionVRP.cpp  SolutionVRP.hpp  Veicoli.cpp  Veicoli.hpp  actualizar.cpp  actualizar.hpp  matrix.cpp  matrix.hpp  openfiles.cpp  openfiles.hpp  vrp.cpp  vrpBuilder.cpp  vrpBuilder.h
(+90 files in other folders)
